--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -815,3 +815,16 @@ footer h3 {
   }
 }
 
+.banner-container {
+  width: 100%;
+  height: 550px;
+  overflow: hidden;
+  margin-bottom: 30px;
+}
+
+.banner-image {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+}
