Added relative paths

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- Header -->
-<header id="header-title" style="background-image: url('/assets/img/cropped-fpga.jpg'); color: #fff; padding: 20px 0;">
+<header id="header-title" style="background-image: url('{{ '/assets/img/cropped-fpga.jpg' | relative_url }}'); color: #fff; padding: 20px 0;">
     <div class="container text-center">
-        <a href="/" style="text-decoration: none; color: inherit;">
+        <a href="{{ '/' | relative_url }}" style="text-decoration: none; color: inherit;">
             <h1 style="margin: 0; font-weight: 800; font-family: 'Raleway', sans-serif;">
                 <strong>Computer Systems @ CU </strong>
             </h1>
