--- a/_includes/area.html
+++ b/_includes/area.html
@@ -1,89 +1,3 @@
-<!--&lt;!&ndash;<section id="research-areas" class="section-global-wrapper">&ndash;&gt;-->
-<!--&lt;!&ndash;    <div class="container">&ndash;&gt;-->
-<!--&lt;!&ndash;        <h1 class="title-text">Research Areas</h1>&ndash;&gt;-->
-<!--&lt;!&ndash;        <hr />&ndash;&gt;-->
-<!--&lt;!&ndash;        <div class="area-list">&ndash;&gt;-->
-<!--&lt;!&ndash;            {% assign faculty_list = site.data.faculty %}&ndash;&gt;-->
-<!--&lt;!&ndash;            {% for area in site.data.researchAreas %}&ndash;&gt;-->
-<!--&lt;!&ndash;            <div class="services-group wow animated fadeIn{% if forloop.index0 % 2 == 0 %}Left{% else %}Right{% endif %}" data-wow-offset="40" style="margin-bottom: 40px;">&ndash;&gt;-->
-<!--&lt;!&ndash;                <h2>&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% case area.title %}&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% when "Systems & Software Security" %}<span class="fa fa-shield-alt"></span>&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% when "Hardware & Microarchitectural Security" %}<span class="fa fa-microchip"></span>&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% when "Networking, Wireless & Mobile Systems" %}<span class="fas fa-network-wired"></span>&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% when "Machine Learning Systems & Infrastructure" %}<span class="fa fa-robot"></span>&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% when "Data & IoT Analytics" %}<span class="fa fa-chart-line"></span>&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% when "Storage, Memory & Nonvolatile Systems" %}<span class="fa fa-save"></span>&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% when "Control & Optimization of Complex Systems" %}<span class="fa fa-sliders-h"></span>&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% when "Privacy, Policy & Social Computing" %}<span class="fa fa-user-secret"></span>&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% else %}<span class="fa fa-laptop-code"></span>&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% endcase %}&ndash;&gt;-->
-<!--&lt;!&ndash;                    {{ area.caption }}&ndash;&gt;-->
-<!--&lt;!&ndash;                </h2>&ndash;&gt;-->
-<!--&lt;!&ndash;                <p>{{ area.description }}</p>&ndash;&gt;-->
-
-<!--&lt;!&ndash;                <div class="area-list-faculty">&ndash;&gt;-->
-<!--&lt;!&ndash;                    <strong>Faculty:</strong>&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% assign faculty_names = "" %}&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% for faculty in faculty_list %}&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% if faculty.areas contains area.title %}&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% if faculty_names != "" %}&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% assign faculty_names = faculty_names | append: ", " %}&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% endif %}&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% assign faculty_names = faculty_names | append: faculty.name %}&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% endif %}&ndash;&gt;-->
-<!--&lt;!&ndash;                    {% endfor %}&ndash;&gt;-->
-<!--&lt;!&ndash;                    {{ faculty_names }}&ndash;&gt;-->
-<!--&lt;!&ndash;                </div>&ndash;&gt;-->
-<!--&lt;!&ndash;            </div>&ndash;&gt;-->
-<!--&lt;!&ndash;            {% endfor %}&ndash;&gt;-->
-<!--&lt;!&ndash;        </div>&ndash;&gt;-->
-<!--&lt;!&ndash;    </div>&ndash;&gt;-->
-<!--&lt;!&ndash;</section>&ndash;&gt;-->
-
-<!--<section id="research-areas" class="section-global-wrapper">-->
-<!--    <div class="container">-->
-<!--        <h1 class="title-text">Research Areas</h1>-->
-<!--        <hr />-->
-<!--        <div class="area-list">-->
-<!--            {% assign faculty_list = site.data.faculty %}-->
-<!--            {% for area in site.data.researchAreas %}-->
-<!--            <div class="services-group wow animated fadeIn{% if forloop.index0 % 2 == 0 %}Left{% else %}Right{% endif %}" data-wow-offset="40" style="margin-bottom: 40px;">-->
-<!--                <h2>-->
-<!--                    {% case area.title %}-->
-<!--                    {% when "Systems & Software Security" %}<span class="fa fa-shield-alt"></span>-->
-<!--                    {% when "Hardware & Microarchitectural Security" %}<span class="fa fa-microchip"></span>-->
-<!--                    {% when "Networking, Wireless & Mobile Systems" %}<span class="fas fa-network-wired"></span>-->
-<!--                    {% when "Machine Learning Systems & Infrastructure" %}<span class="fa fa-robot"></span>-->
-<!--                    {% when "Data & IoT Analytics" %}<span class="fa fa-chart-line"></span>-->
-<!--                    {% when "Storage, Memory & Nonvolatile Systems" %}<span class="fa fa-save"></span>-->
-<!--                    {% when "Control & Optimization of Complex Systems" %}<span class="fa fa-sliders-h"></span>-->
-<!--                    {% when "Privacy, Policy & Social Computing" %}<span class="fa fa-user-secret"></span>-->
-<!--                    {% else %}<span class="fa fa-laptop-code"></span>-->
-<!--                    {% endcase %}-->
-<!--                    {{ area.caption }}-->
-<!--                </h2>-->
-<!--                <p>{{ area.description }}</p>-->
-
-<!--                <div class="area-list-faculty">-->
-<!--                    <strong>Faculty:</strong>-->
-<!--                    {% assign links = "" %}-->
-<!--                    {% for faculty in faculty_list %}-->
-<!--                    {% if faculty.areas contains area.title %}-->
-<!--                    {% if links != "" %}-->
-<!--                    {% assign links = links | append: ", " %}-->
-<!--                    {% endif %}-->
-<!--                    {% assign link = "<a href='" | append: faculty.website | append: "' target='_blank'>" | append: faculty.name | append: "</a>" %}-->
-<!--                    {% assign links = links | append: link %}-->
-<!--                    {% endif %}-->
-<!--                    {% endfor %}-->
-<!--                    {{ links }}-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            {% endfor %}-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
 <section id="research-areas" class="section-global-wrapper">
     <div class="container">
         <h1 class="title-text">Research Areas</h1>
@@ -106,7 +20,7 @@
                     {% endcase %}
                     {{ area.caption }}
                 </h2>
-                <p>{{ area.description }}</p>
+                {{ area.description | markdownify }}
 
                 <div class="area-list-faculty">
                     <strong>Faculty:</strong>
